--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13"
@@ -14,7 +15,6 @@
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/drachen2299/Cub-Club.git"
