--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "nodemon": "^2.0.13"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "name": "the-cub-club",
   "description": "",
