--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.13"
+    "morgan": "^1.10.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "npm run start",
+    "dev": "npm run dev"
   },
   "name": "the-cub-club",
   "description": "",
@@ -27,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/drachen2299/Cub-Club/issues"
   },
-  "homepage": "https://github.com/drachen2299/Cub-Club#readme"
+  "homepage": "https://github.com/drachen2299/Cub-Club#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.13"
+  }
 }
