--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "path": "^0.12.7",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0"
   },
   "scripts": {
     "start": "node index.js",
