--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
     "path": "^0.12.7",
-    "socket.io": "^4.2.0",
-    "socket.io-client": "^4.2.0"
+    "socket.io": "^4.2.0"
   },
   "scripts": {
     "start": "node index.js",
